--- a/240326_position/positionEx3.css
+++ b/240326_position/positionEx3.css
@@ -24,6 +24,16 @@ html {
 body::-webkit-scrollbar {
   width: 8px;
 }
+/* 스크롤바 배경 */
+body::-webkit-scrollbar-track {
+  background-color: #fff;
+}
+/* 스크롤바 핸들 */
+body::-webkit-scrollbar-thumb {
+  background-color: #FF204E;
+  border: 1px solid yellow;
+  border-radius: 5px;
+}
 
 body {
   font-family: 'SpoqaHanSans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', '맑은 고딕', '돋움', sans-serif;
